--- a/Modeles_ML_POO/Modeles_ML_POO/Modeles_ML_POO.csproj
+++ b/Modeles_ML_POO/Modeles_ML_POO/Modeles_ML_POO.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NumSharp" Version="0.20.0" />
+  </ItemGroup>
+
 </Project>
